# Coursework_2

./: .gitignore  main.py  pyproject.toml
src/: classes.py  hh.py  manager.py  second_js_file.json
